Implementar RBAC y gestión segura de perfil de usuario